Change log for zeit.web
=======================

2.100 (unreleased)
------------------

- ZON-2861: Newsbox on keyword- and topicpages

- OPS-386: Refactor ZMO article-macros (Part: Article Blocks)


2.99 (2016-08-18)
-----------------

- BUG-497: Wrap auto-teaser blocks in zeit.web module classes just like normal teasers

- ZON-3280: Enable RSS feeds for non-ZON content

- ZON-3246: Remove redirect for expired video pages

- ZON-2389: Make Webtrekk-ID configurable (for staging)

- ZON-3183: Add webtrekk clicktracking to amp pages

- FIX: Don't break when a ranking area is automatic=False


2.98.1 (2016-08-16)
-------------------

- FIX: Include AdReload in framebuilder JS

- BUG-496: Fix search options stacking order


2.98 (2016-08-16)
-----------------

- BUG-477: Keep sort parameter in comment pagination #1951

- BUG-498: Centering gallery icons

- ZON-3214: Restyle reisebox and bemify general partnerbox markup

- ZON-3227: Update to IContentQuery API to prepare for Retresco

- ZON-3212: Adapt ad place 7 width

- FIX: Tweak padding for infographic images

- FIX: Make xml.zeit.de routing work for author and link objects


2.97.4 (2016-08-11)
-------------------

- HOTFIX: Fix typo in VariantImage code

- BUG-490: delete special font settings for advertorial teaser

- BUG-419: Include iq-artikelanker only once on komplettansicht


2.97.3 (2016-08-11)
-------------------

- FIX: Determine ratio according to viewport for the "original" variant


2.97.2 (2016-08-11)
-------------------

- FIX: Apply display_mode settings to infographic images too

- FIX: Be defensive about resolving infoboxes on xml.zeit.de


2.97.1 (2016-08-10)
-------------------

- HOTFIX: Fix teaser images in playlist module


2.97 (2016-08-10)
-----------------

- HOTFIX: Set display_mode=large for article header images

- BUG-478: Show label on zco text-only advertorial teaser

- ZON-3099: Make xml.zeit.de routing work

- BUG-372: Track video page URL for video player events
